--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -95,6 +95,7 @@ figure {
   position: relative;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   .welcome__text__title {
     font-family: 'Prequel', sans-serif;
   }
