--- a/site/source/layouts/main/_footer.haml
+++ b/site/source/layouts/main/_footer.haml
@@ -1,7 +1,7 @@
 .footer-separtor
 %footer
   %section.content__container.footer__container
-    .footer__element
+    .footer__element.title
       &copy; Montażownia
     .footer__element
       = link_to 'http://facebook.com/montazownia' do
