--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -9,7 +9,7 @@ header: "Widzę, że chcesz"
     =image_tag("https://scontent-waw1-1.cdninstagram.com/t51.2885-19/s150x150/21042466_1932071607066583_7762185533819715584_a.jpg",
      :style => "height: 300px;")
   %header.welcome__text
-    %h1.mdl-typography--display-2.welcome__text__title WIDZE, ZE CHCESZ
+    %h1.mdl-typography--display-2.welcome__text__title WIDZĘ, ŻE CHCESZ
   .scroller
 
 %section
