--- a/site/source/stylesheets/_calendar.scss
+++ b/site/source/stylesheets/_calendar.scss
@@ -59,11 +59,13 @@ img.contact__info__social-icons {
 
 #calendar {
   margin: auto;
+  border: 4px solid $page-secondary;
 }
 
 #map {
   width: 100%;
   height: 100%;
+  border: 4px solid $page-secondary;
 }
 
 
