--- a/site/source/stylesheets/_footer.scss
+++ b/site/source/stylesheets/_footer.scss
@@ -1,5 +1,3 @@
-
-
 .footer-separtor {
   @extend .section__header-separotor;
   width: 100%;
@@ -17,16 +15,17 @@ footer {
     align-items: center;
 
     .footer__social-icons {
-      height: 25px;
-      padding-left: 10px;
+      height: 27px;
+      padding-left: 5px;
     }
   }
 
   .footer__element {
     width: 50%;
-    &:last-of-type {
-      display: flex;
-      justify-content: flex-end;
-    }
+  }
+
+  .title {
+    font-family: 'Carolina', sans-serif;
+    letter-spacing: 1px;
   }
 }
