--- a/site/source/stylesheets/_variables.scss
+++ b/site/source/stylesheets/_variables.scss
@@ -12,3 +12,12 @@ $default-dark: #000;
 $free-term: $page-primary--lighter;
 $busy-term: #f3f3f3;
 $partially-term: $page-primary--darker;
+
+//Media
+$mobileS: 320px;
+$mobileM: 375px;
+$mobileL: 425px;
+$tablet: 768px;
+$laptop: 1024px;
+$laptopL: 1440px;
+$fourK: 2560px;
