--- a/site/source/stylesheets/_portfolio.scss
+++ b/site/source/stylesheets/_portfolio.scss
@@ -17,6 +17,14 @@
     justify-content: center;
     align-items: center;
     background-color: #f3f3f3;
+    @media only screen and (min-width: $mobileS) and (max-width: $tablet) {
+      width: 110px;
+      height: 110px;
+    }
+    @media only screen and (min-width: $tablet) and (max-width: $laptop) {
+      width: 150px;
+      height: 150px;
+    }
 
     &:after {
       content: '';
@@ -44,6 +52,12 @@
     img {
       height: 350px;
       transition: height 0.3s ease-in, transform 0.3s ease-in;
+      @media only screen and (min-width: $mobileS) and (max-width: $tablet) {
+        height: 200px;
+      }
+      @media only screen and (min-width: $tablet) and (max-width: $laptop) {
+        height: 280px;
+      }
     }
   }
 }
@@ -52,9 +66,22 @@
   width: fit-content;
   position: fixed;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(0, -50%) scale(0.1,0.1);
+  transition: 0.3s all ease;
+  padding: 1em 2.5em;
+  @media only screen and (min-width: $mobileS) and (max-width: $mobileL) {
+    padding: 0;
+
+  }
+  @media only screen and (min-width: $mobileL) and (max-width: $tablet) {
+    padding: 1.2em;
+
+  }
   &::backdrop {
     background-color: rgba(0, 0, 0, 0.7);
+  }
+  .dialog-button:active, .dialog-button:focus:not(:active) {
+    background-color: inherit;
   }
 }
 
@@ -72,27 +99,51 @@
   top: 0;
   margin: auto;
   height: 100%;
-  width: 20%;
 
   &:first-of-type {
-    left: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), transparent);
+    left: -4.5em;
+    @media only screen and (min-width: $mobileS) and (max-width: $mobileL) {
+      left: -2.3em;
+    }
+    @media only screen and (min-width: $mobileL) and (max-width: $tablet) {
+      left: -3.5em;
+    }
   }
 
   &:last-of-type {
-    right: 0;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0.7), transparent);
+    right: -4.5em;
     justify-content: flex-end;
+    @media only screen and (min-width: $mobileS) and (max-width: $mobileL) {
+      right: -2.3em;
+    }
+    @media only screen and (min-width: $mobileL) and (max-width: $tablet) {
+      right: -3.5em;
+    }
   }
 
   &__icon {
-    color: $page-secondary;
-    font-size: 3.5em;
+    color: $default-dark;
+    font-size: 5em;
     cursor: pointer;
+    @media only screen and (min-width: $mobileS) and (max-width: $mobileL) {
+      font-size: 3em;
+    }
+    @media only screen and (min-width: $mobileL) and (max-width: $tablet) {
+      font-size: 4em;
+    }
   }
 }
 
 .dialog-image {
   max-width: 900px;
   max-height: 500px;
+
+  @media only screen and (min-width: $mobileS) and (max-width: $mobileL) {
+    max-width: 290px;
+    max-height: 330px;
+  }
+  @media only screen and (min-width: $mobileL) and (max-width: $tablet) {
+    max-width: 320px;
+    max-height: 440px;
+  }
 }
