--- a/site/source/stylesheets/site.css.scss
+++ b/site/source/stylesheets/site.css.scss
@@ -75,6 +75,10 @@ figure {
   align-items: center;
 }
 
+.no-user-select {
+  user-select: none;
+}
+
 .section__header-separotor {
   background: linear-gradient(45deg, $page-primary 0%, $page-primary--darker 100%);
   height: 2px;
