--- a/site/source/stylesheets/_navbar.scss
+++ b/site/source/stylesheets/_navbar.scss
@@ -12,10 +12,6 @@
     color: $default-dark;
     position: relative;
 
-    &__link--active:after {
-      width: 75%;
-    }
-
     &:after {
       content: '';
       position: absolute;
@@ -30,6 +26,10 @@
     }
 
     &:hover:after {
+      width: 75%;
+    }
+
+    &--active:after {
       width: 75%;
     }
   }
