Add gradient borders & Transparent navbar

--- a/site/source/localizable/calendar.html.haml
+++ b/site/source/localizable/calendar.html.haml
@@ -53,5 +53,5 @@ additional_javascripts:
       .legend__color__el.valign-wrapper
         .legend__color__el__icon.legend__color__el__icon--busy
         %span.legend__text__el=t("calendar.legend.not")
-  %figure
+  %figure.calendar
     #calendar
