--- a/site/source/stylesheets/_navbar.scss
+++ b/site/source/stylesheets/_navbar.scss
@@ -3,9 +3,7 @@
 .nav-bar {
   position: fixed;
   background: #32e0dd; /* Old browsers */
-  background: -moz-linear-gradient(top, #16f6ed 0%, #fff 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #16f6ed 0%,#fff 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #16f6ed 0%,#fff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: linear-gradient(to bottom, #16f6ed 0%, rgba(250, 250, 250, 0.9) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   color: $default-dark;
 
   & &__link {
