--- a/site/source/stylesheets/_variables.scss
+++ b/site/source/stylesheets/_variables.scss
@@ -21,3 +21,5 @@ $tablet: 768px;
 $laptop: 1024px;
 $laptopL: 1440px;
 $fourK: 2560px;
+
+$gradient-border: linear-gradient(45deg, $page-primary--lighter 0%, $page-primary--darker 100%);;
