--- a/site/source/stylesheets/_faq.scss
+++ b/site/source/stylesheets/_faq.scss
@@ -1,5 +1,10 @@
 @import "variables";
 
+#care {
+  margin-top: 1em;
+  padding-top: 60px;
+}
+
 .question {
   border-bottom: 2px solid $page-secondary;
   padding: 2em 1em;
