--- a/site/source/localizable/faq.html.haml
+++ b/site/source/localizable/faq.html.haml
@@ -6,9 +6,22 @@ header: "F.A.Q."
 additional_javascripts:
   - src: "faq.js"
 ---
-%section
+%section#faq
   %header
     %h3.section__header=t("faq.header")
+  .section__header-separotor
+  -get_faq_list.each do |item|
+    %article.question
+      %h4.question__title.showAnswer
+        %i.material-icons.question__title__icon.rotateIcon keyboard_arrow_down
+        %strong=item.question
+      %p.question__answer.answerShown
+        =item.answer
+        -if item.link
+          %span.anchor=link_to(item.link.info, item.link.address, target: "_blank")
+%section#care
+  %header
+    %h3.section__header Pielęgnacja
   .section__header-separotor
   -get_faq_list.each do |item|
     %article.question
