--- a/site/source/layouts/main/_nav_links.html.haml
+++ b/site/source/layouts/main/_nav_links.html.haml
@@ -1,9 +1,25 @@
 -get_navlink_sites.each do |page|
-  -if page.data.id.eql? current_page.data.id
-    =link_to(get_navlink_title(page.data.id), 
-    page.url, 
-    :class=> "mdl-navigation__link nav-bar__link nav-bar__link--active")
+  -if page.data.id.eql? "faq"
+    -if is_current_page(page)
+      =link_to(get_navlink_title(page.data.id), 
+      "#"+get_navlink_title(page.data.id), 
+      :class=> "mdl-navigation__link nav-bar__link nav-bar__link--active")      
+      =link_to(get_navlink_title("guide"),
+      "#"+get_navlink_title("guide"),
+      :class=> "mdl-navigation__link nav-bar__link")
+    -else
+      =link_to(get_navlink_title(page.data.id), 
+      page.url, 
+      :class=> "mdl-navigation__link nav-bar__link")
+      =link_to(get_navlink_title("guide"),
+      page.url+"#"+get_navlink_title("guide"),
+      :class=> "mdl-navigation__link nav-bar__link")
   -else
-    =link_to(get_navlink_title(page.data.id), 
-    page.url, 
-    :class=> "mdl-navigation__link nav-bar__link")
+    -if is_current_page(page)
+      =link_to(get_navlink_title(page.data.id), 
+      page.url, 
+      :class=> "mdl-navigation__link nav-bar__link nav-bar__link--active")
+    -else
+      =link_to(get_navlink_title(page.data.id), 
+      page.url, 
+      :class=> "mdl-navigation__link nav-bar__link")
