--- a/site/source/localizable/index.html.haml
+++ b/site/source/localizable/index.html.haml
@@ -12,9 +12,24 @@ header: "Widzę, że chcesz"
     %h1.mdl-typography--display-2.welcome__text__title WIDZĘ, ŻE CHCESZ
   .scroller
 
-%section
+%section#studio
   %header
-    %h2 Kim jesteśmy?
-    %h3
-      %strong
+    %h3 Montażownia tatuażu
   %p 
+    %strong
+      Montażownia Tatuażu to młode studio ulokowane w centrum Poznania na ulicy Różanej. Tworzy je trójka przyjaciół: Lena (tatuaże, założycielka), Boguś (piercing, laser, organizacja) oraz Mikołaj (booking, social media, support).
+    Naszą misją jest budowanie doświadczenia. Uważamy, że modyfikacje ciała to nie tylko trwała zmiana swojego wyglądu, ale też i dobre wspomnienia. Chcemy by każdy kto przychodzi do naszego studia poczuł się komfortowo oraz mógł spędzić sesję w przyjaznej atmosferze, pogadać na luzie nie tylko o tatuażach, a gdy nadejdzie ochota skoczyć w trakcie sesji wspólnie na coś smacznego do jedzenia.
+%section#lena
+  %header
+    %h3 Tatuaże - Lena
+  %p
+    %strong
+      Lena to miła i żywiołowa kobieta. Zoodiakalny lew, a także Matka Chrzestna całej Montażowni oraz jej główny motor napędowy.
+    Tatuaże tworzone przez Lenę cechują się przede wszystkim unikalnym dotworkowym cieniowaniem, zabawą kolorem poprzez wykorzystanie gradientów (głównie w odcieniach niebieskiego). Inspiracje czerpie między innymi z europejskiej szkoły ilustratorskiej przełomu XIX/XX w. Zwierzątka, roślinki czy postaci z jej ulubionych "rycinek" często otrzymują elementy techniczne wychodzące bezpośrednio z oldschoolu, traditionalu oraz neotraditionalu tworząc ostatecznie unikalne prace, które możecie obejrzeć w portfolio :).
+%section#bogus
+  %header
+    %h3 Piercing/Laser - Boguś
+  %p
+    %strong
+      Tak naprawdę ma na imię Maciej, ale wszyscy mówimy na niego Boguś.
+    To człowiek tysiąca talentów, który w swoim życiu wykonywał już tysiące prac, co pozwala mu zająć się wieloma istotnymi sprawami z punktu widzenia studia tatuażu. Przede wszystkim jest certyfikowanym piercerem, który potrafi wykonywać ukłucia szybko i bezboleśnie niczym ukłucie komara ;). Potrafi także obsługiwać laser służący do demontowania tatuaży oraz udzieli Ci wszystkich informacji związanych z Twoim zabiegiem.
