--- a/site/source/layouts/main/_footer.haml
+++ b/site/source/layouts/main/_footer.haml
@@ -1,7 +1,7 @@
 .footer-separtor
 %footer
   %section.content__container.footer__container.halign-wrapper.valign-wrapper
-    = link_to 'http://facebook.com/montazownia' do
+    = link_to 'http://facebook.com/montazownia', :target => "_blank" do
       = image_tag 'site/facebook-icon.png', class: 'footer__social-icons no-user-select'
-    = link_to 'http://instagram.com/montazownia' do
+    = link_to 'http://instagram.com/montazownia', :target => "_blank" do
       = image_tag 'site/insta-icon.png', class: 'footer__social-icons no-user-select'
